spacing fixes

--- a/style.css
+++ b/style.css
@@ -30,6 +30,12 @@ h4 {
 }
 
 a {
+	padding-left: 3px;
+	padding-right: 3px;
 	color: black;
 	text-decoration: none;
+}
+
+.hireme {
+	padding: 5%;
 }
